fix: java.lang.NullPointerException